<?xml version="1.0"?>
<package>
  <name>visualization</name>
  <version>0.1.0</version>
  <description>A simple opencv-based GUI</description>

  <maintainer email="lamparta@student.ethz.ch">andy</maintainer>



  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>cmake_modules</build_depend>
  

  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
 

  <export>
  </export>
</package>
